# Kafra-Client

./: .gitignore  App.tsx  README.md  config.yml  electron-builder.yml  index.html  main.js  metadata.json  package-lock.json  package.json  rpatchur.yml  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
.agent/workflows/: fix-dev-mode.md
components/: PatcherUI.tsx  SettingsModal.tsx
dist-electron/: main.js  preload.cjs  preload.js
docs/: CUSTOM_ACTIONS.md  PATCHER_SPEC.md
electron/: main.ts  preload.ts
electron/patcher/: config.ts  downloader.ts  patchList.ts  thorPatcher.ts
electron/patcher/grf/: index.ts  reader.ts  types.ts  writer.ts
public/: bgm_instruction.txt  icon.txt
src/: App.tsx  index.css  tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  temp_fix.txt
src-tauri/embed-resource/src/: windows_not_msvc.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs
src-tauri/src/patcher/: downloader.rs  mod.rs  patch_list.rs  thor_patcher.rs
src-tauri/src/patcher/grf/: mod.rs  reader.rs  types.rs  writer.rs
src/components/: PatcherUI.tsx  ProgressBar.tsx  SettingsModal.tsx  TitleBar.tsx
src/types/: patcher.ts
